# nuvex

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.brain  Dockerfile.dashboard  Dockerfile.gateway-mail  Dockerfile.gateway-tg  Dockerfile.gateway-wa  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  README.nuvex.md  SECURITY.md  Start-Sidjua.bat  Start-Sidjua.command  _check_env.sh  _pytest_full2.txt  _pytest_out.txt  _pytest_targeted.txt  _pytest_targeted2.txt  _tmp_desktop_read.txt  _tmp_desktop_tools.txt  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.backup.1774489230  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  seccomp-profile.json  tsconfig.json  tsup.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.research/: LLM Cost Reduction Strategies.md
.research/openclaw/: README.md  clawhub-popular-skills.md  gap-analysis.md  github-bugs.md  github-feature-requests.md
.secrets/: channels.env.example  infra.env.example  llm.env.example
adapters/messaging/: DEVELOPER-GUIDE.md
audit/active-openspec/: README.md
audit/organisation-isolation/: README.md  capabilities.md  requirements-matrix.md
config/: channels.env.example  divisions.yaml  nuvex.yaml  testcorp-divisions.yaml
defaults/: delegation.yaml  desktop-tools.yaml  divisions.yaml  messaging.yaml  scheduling.yaml
docs/: AGENT-TEMPLATES.md  CLI-REFERENCE.md  FREE-LLM-PROVIDER-GUIDE.md  GOVERNANCE-EXAMPLES.md  GUI-SMOKE-TEST-CHECKLIST.md  INSTALLATION.md  KNOWN-ISSUES-V1.md  KNOWN-LIMITATIONS.md  LICENSE-AUDIT.md  PRE-ACTION-PIPELINE-SPEC-V1.md  QUICK-START.md  SIDJUA-APPLY-TECH-SPEC-V1.md  SIDJUA-CONCEPTS.md  TESTING.md  TROUBLESHOOTING.md  USER-MANUAL.md  security-limitations-v1.md
issues/: 2026-04-16-local-docker-deploy-report.md  2026-04-16-wa-conflict-reconnect-loop.md
legacy-ts/src/nuvex-desktop/: Cargo.toml  _build10.txt  _build2.txt  _build3.txt  _build4.txt  _build5.txt  _build6.txt  _build7.txt  _build8.txt  _build9.txt  _build_out.txt  build.rs
legacy-ts/src/nuvex-desktop/src/: config.rs  connection.rs  dispatcher.rs  main.rs  settings_window.rs  tray.rs  updater.rs  wizard.rs
legacy-ts/src/nuvex-desktop/src/tools/: clipboard.rs  input.rs  mod.rs  screen.rs  shell.rs
locales/: _template.json  ar.json  bn.json  cs.json  de.json  es.json  fil.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  pl.json  pt-BR.json  ro.json  ru.json  sv.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
scripts/: backup-nuvex-db.sh  build-desktop-agent.ps1  build-docker.sh  check-i18n-completeness.ts  check-license-headers.sh  deploy-nuvex.sh  docker-smoke-test.sh  generate-architecture-svg.js  generate-comparison-svg.js  generate-screenshots.js  generate-social-banner.js  install-docker.sh  provision-nuvex.sh  verify-readme.sh  verify-watermark.sh
sidjua-gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: index.ts  nuvex_desktop_run.py  version.ts
src/desktop_agent/: __init__.py  __main__.py  config.py  connection.py  dispatcher.py  idle.py  notifications.py  nuvex-desktop.spec  pyproject.toml  scheduler.py  setup_wizard.py  tray.py
src/desktop_agent/tools/: __init__.py  clipboard.py  com_outlook.py  input.py  screen.py  shell.py  uia.py
unit-tests/: conftest.py
(+1612 files in other folders)
